--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,17 +7,29 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
-resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
-resources.view[] =
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
+
+;config modules
+includePaths.modules = APPLICATION_PATH "/modules"
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+resources.frontController.defaultModule = "default"
+
+;config layouts
+admin.resources.layout.layoutPath = APPLICATION_PATH "/modules/admin/layouts/scripts"
+admin.resources.layout.layout = layout
+
+;config database
 resources.db.adapter = "Pdo_Mysql"
 resources.db.params.username = "root"
 resources.db.params.password = ""
 resources.db.params.dbname = "basecampion"
+
 [staging : production]
 
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
+;config database
 resources.db.adapter = "Pdo_Mysql"
 resources.db.params.username = "root"
 resources.db.params.password = ""
@@ -27,6 +39,7 @@ resources.db.params.dbname = "basecampion"
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+;config database
 resources.db.adapter = "Pdo_Mysql"
 resources.db.params.username = "root"
 resources.db.params.password = ""
